--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.lib filter=lfs diff=lfs merge=lfs -text
+libfbxsdk*.lib filter=lfs diff=lfs merge=lfs -text
 *.ini filter=lfs diff=lfs merge=lfs -text
