--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="Code\math\Operator.cpp">
       <Filter>ソースファイル\math</Filter>
     </ClCompile>
+    <ClCompile Include="Code\scene\FadeScene.cpp">
+      <Filter>ソースファイル\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\win\SafeDelete.h">
@@ -289,6 +292,9 @@
     </ClInclude>
     <ClInclude Include="Code\math\Operator.h">
       <Filter>ヘッダーファイル\math</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\scene\FadeScene.h">
+      <Filter>ヘッダーファイル\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
