--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -59,7 +59,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Code\2d;$(ProjectDir)Code\3d;$(ProjectDir)Code\win;$(ProjectDir)Code\audio;$(ProjectDir)Code\math;$(ProjectDir)Code\postEffect;$(ProjectDir)Code\game;$(ProjectDir)Code\input;$(ProjectDir)Code\json;$(ProjectDir)Code\scene</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\application\win;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\math;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\game;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\json;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
@@ -78,7 +78,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Code\2d;$(ProjectDir)Code\3d;$(ProjectDir)Code\win;$(ProjectDir)Code\audio;$(ProjectDir)Code\math;$(ProjectDir)Code\postEffect;$(ProjectDir)Code\game;$(ProjectDir)Code\input;$(ProjectDir)Code\json;$(ProjectDir)Code\scene</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\application\win;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\math;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\game;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\json;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>true</TreatWarningAsError>
@@ -92,82 +92,6 @@
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Code\2d\DebugText.cpp" />
-    <ClCompile Include="Code\2d\Image2d.cpp" />
-    <ClCompile Include="Code\3d\Model.cpp" />
-    <ClCompile Include="Code\3d\Object3d.cpp" />
-    <ClCompile Include="Code\3d\Particle.cpp" />
-    <ClCompile Include="Code\audio\Audio.cpp" />
-    <ClCompile Include="Code\game\Bullet.cpp" />
-    <ClCompile Include="Code\game\Camera.cpp" />
-    <ClCompile Include="Code\game\Collision.cpp" />
-    <ClCompile Include="Code\game\Easing.cpp" />
-    <ClCompile Include="Code\game\Enemy.cpp" />
-    <ClCompile Include="Code\game\Light.cpp" />
-    <ClCompile Include="Code\game\Player.cpp" />
-    <ClCompile Include="Code\game\Rope.cpp" />
-    <ClCompile Include="Code\input\Controller.cpp" />
-    <ClCompile Include="Code\input\Keyboard.cpp" />
-    <ClCompile Include="Code\input\Mouse.cpp" />
-    <ClCompile Include="Code\json\LevelLoader.cpp" />
-    <ClCompile Include="Code\math\Operator.cpp" />
-    <ClCompile Include="Code\postEffect\MultiRT.cpp" />
-    <ClCompile Include="Code\postEffect\MultiTex.cpp" />
-    <ClCompile Include="Code\postEffect\PostEffect.cpp" />
-    <ClCompile Include="Code\scene\FadeScene.cpp" />
-    <ClCompile Include="Code\scene\GameClearScene.cpp" />
-    <ClCompile Include="Code\scene\GameOverScene.cpp" />
-    <ClCompile Include="Code\scene\GameScene.cpp" />
-    <ClCompile Include="Code\scene\SceneFactory.cpp" />
-    <ClCompile Include="Code\scene\SceneManager.cpp" />
-    <ClCompile Include="Code\scene\TitleScene.cpp" />
-    <ClCompile Include="Code\scene\TutorialScene.cpp" />
-    <ClCompile Include="Code\win\DirectXCommon.cpp" />
-    <ClCompile Include="Code\win\Framework.cpp" />
-    <ClCompile Include="Code\win\main.cpp" />
-    <ClCompile Include="Code\win\MyGame.cpp" />
-    <ClCompile Include="Code\win\WinApp.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Code\2d\DebugText.h" />
-    <ClInclude Include="Code\2d\Image2d.h" />
-    <ClInclude Include="Code\3d\Model.h" />
-    <ClInclude Include="Code\3d\Object3d.h" />
-    <ClInclude Include="Code\3d\Particle.h" />
-    <ClInclude Include="Code\audio\Audio.h" />
-    <ClInclude Include="Code\game\Bullet.h" />
-    <ClInclude Include="Code\game\Camera.h" />
-    <ClInclude Include="Code\game\Collision.h" />
-    <ClInclude Include="Code\game\Easing.h" />
-    <ClInclude Include="Code\game\Enemy.h" />
-    <ClInclude Include="Code\game\Light.h" />
-    <ClInclude Include="Code\game\Player.h" />
-    <ClInclude Include="Code\game\Rope.h" />
-    <ClInclude Include="Code\input\Controller.h" />
-    <ClInclude Include="Code\input\Keyboard.h" />
-    <ClInclude Include="Code\input\Mouse.h" />
-    <ClInclude Include="Code\json\LevelLoader.h" />
-    <ClInclude Include="Code\math\Operator.h" />
-    <ClInclude Include="Code\postEffect\MultiRT.h" />
-    <ClInclude Include="Code\postEffect\MultiTex.h" />
-    <ClInclude Include="Code\postEffect\PostEffect.h" />
-    <ClInclude Include="Code\scene\AbstructSceneFactory.h" />
-    <ClInclude Include="Code\scene\BaseScene.h" />
-    <ClInclude Include="Code\scene\FadeScene.h" />
-    <ClInclude Include="Code\scene\GameClearScene.h" />
-    <ClInclude Include="Code\scene\GameOverScene.h" />
-    <ClInclude Include="Code\scene\GameScene.h" />
-    <ClInclude Include="Code\scene\SceneFactory.h" />
-    <ClInclude Include="Code\scene\SceneManager.h" />
-    <ClInclude Include="Code\scene\TitleScene.h" />
-    <ClInclude Include="Code\scene\TutorialScene.h" />
-    <ClInclude Include="Code\win\DirectXCommon.h" />
-    <ClInclude Include="Code\win\Framework.h" />
-    <ClInclude Include="Code\win\MyGame.h" />
-    <ClInclude Include="Code\win\SafeDelete.h" />
-    <ClInclude Include="Code\win\WinApp.h" />
-  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Basic.hlsli" />
     <None Include="Resources\shaders\Object.hlsli" />
@@ -242,6 +166,82 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Code\application\scene\AbstructSceneFactory.h" />
+    <ClInclude Include="Code\application\scene\BaseScene.h" />
+    <ClInclude Include="Code\application\scene\SceneFactory.h" />
+    <ClInclude Include="Code\application\scene\SceneManager.h" />
+    <ClInclude Include="Code\application\win\DirectXCommon.h" />
+    <ClInclude Include="Code\application\win\Framework.h" />
+    <ClInclude Include="Code\application\win\MyGame.h" />
+    <ClInclude Include="Code\application\win\SafeDelete.h" />
+    <ClInclude Include="Code\application\win\WinApp.h" />
+    <ClInclude Include="Code\engine\2d\DebugText.h" />
+    <ClInclude Include="Code\engine\2d\Image2d.h" />
+    <ClInclude Include="Code\engine\3d\Model.h" />
+    <ClInclude Include="Code\engine\3d\Object3d.h" />
+    <ClInclude Include="Code\engine\3d\Particle.h" />
+    <ClInclude Include="Code\engine\audio\Audio.h" />
+    <ClInclude Include="Code\engine\game\Bullet.h" />
+    <ClInclude Include="Code\engine\game\Camera.h" />
+    <ClInclude Include="Code\engine\game\Collision.h" />
+    <ClInclude Include="Code\engine\game\Easing.h" />
+    <ClInclude Include="Code\engine\game\Enemy.h" />
+    <ClInclude Include="Code\engine\game\Light.h" />
+    <ClInclude Include="Code\engine\game\Player.h" />
+    <ClInclude Include="Code\engine\game\Rope.h" />
+    <ClInclude Include="Code\engine\input\Controller.h" />
+    <ClInclude Include="Code\engine\input\Keyboard.h" />
+    <ClInclude Include="Code\engine\input\Mouse.h" />
+    <ClInclude Include="Code\engine\json\LevelLoader.h" />
+    <ClInclude Include="Code\engine\math\Operator.h" />
+    <ClInclude Include="Code\engine\postEffect\MultiRT.h" />
+    <ClInclude Include="Code\engine\postEffect\MultiTex.h" />
+    <ClInclude Include="Code\engine\postEffect\PostEffect.h" />
+    <ClInclude Include="Code\engine\scene\FadeScene.h" />
+    <ClInclude Include="Code\engine\scene\GameClearScene.h" />
+    <ClInclude Include="Code\engine\scene\GameOverScene.h" />
+    <ClInclude Include="Code\engine\scene\GameScene.h" />
+    <ClInclude Include="Code\engine\scene\TitleScene.h" />
+    <ClInclude Include="Code\engine\scene\TutorialScene.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Code\application\scene\SceneFactory.cpp" />
+    <ClCompile Include="Code\application\scene\SceneManager.cpp" />
+    <ClCompile Include="Code\application\win\DirectXCommon.cpp" />
+    <ClCompile Include="Code\application\win\Framework.cpp" />
+    <ClCompile Include="Code\application\win\main.cpp" />
+    <ClCompile Include="Code\application\win\MyGame.cpp" />
+    <ClCompile Include="Code\application\win\WinApp.cpp" />
+    <ClCompile Include="Code\engine\2d\DebugText.cpp" />
+    <ClCompile Include="Code\engine\2d\Image2d.cpp" />
+    <ClCompile Include="Code\engine\3d\Model.cpp" />
+    <ClCompile Include="Code\engine\3d\Object3d.cpp" />
+    <ClCompile Include="Code\engine\3d\Particle.cpp" />
+    <ClCompile Include="Code\engine\audio\Audio.cpp" />
+    <ClCompile Include="Code\engine\game\Bullet.cpp" />
+    <ClCompile Include="Code\engine\game\Camera.cpp" />
+    <ClCompile Include="Code\engine\game\Collision.cpp" />
+    <ClCompile Include="Code\engine\game\Easing.cpp" />
+    <ClCompile Include="Code\engine\game\Enemy.cpp" />
+    <ClCompile Include="Code\engine\game\Light.cpp" />
+    <ClCompile Include="Code\engine\game\Player.cpp" />
+    <ClCompile Include="Code\engine\game\Rope.cpp" />
+    <ClCompile Include="Code\engine\input\Controller.cpp" />
+    <ClCompile Include="Code\engine\input\Keyboard.cpp" />
+    <ClCompile Include="Code\engine\input\Mouse.cpp" />
+    <ClCompile Include="Code\engine\json\LevelLoader.cpp" />
+    <ClCompile Include="Code\engine\math\Operator.cpp" />
+    <ClCompile Include="Code\engine\postEffect\MultiRT.cpp" />
+    <ClCompile Include="Code\engine\postEffect\MultiTex.cpp" />
+    <ClCompile Include="Code\engine\postEffect\PostEffect.cpp" />
+    <ClCompile Include="Code\engine\scene\FadeScene.cpp" />
+    <ClCompile Include="Code\engine\scene\GameClearScene.cpp" />
+    <ClCompile Include="Code\engine\scene\GameOverScene.cpp" />
+    <ClCompile Include="Code\engine\scene\GameScene.cpp" />
+    <ClCompile Include="Code\engine\scene\TitleScene.cpp" />
+    <ClCompile Include="Code\engine\scene\TutorialScene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
