--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -59,7 +59,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\application\win;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\math;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\game;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\json;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine;$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\camera;$(ProjectDir)Code\engine\directXCommon;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\level;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\safeDelete;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\engine\winApp;$(ProjectDir)Code\application;$(ProjectDir)Code\application\game;$(ProjectDir)Code\application\math;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
@@ -78,7 +78,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\application\win;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\math;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\game;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\json;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Code\engine;$(ProjectDir)Code\engine\2d;$(ProjectDir)Code\engine\3d;$(ProjectDir)Code\engine\audio;$(ProjectDir)Code\engine\camera;$(ProjectDir)Code\engine\directXCommon;$(ProjectDir)Code\engine\input;$(ProjectDir)Code\engine\level;$(ProjectDir)Code\engine\postEffect;$(ProjectDir)Code\engine\safeDelete;$(ProjectDir)Code\engine\scene;$(ProjectDir)Code\engine\winApp;$(ProjectDir)Code\application;$(ProjectDir)Code\application\game;$(ProjectDir)Code\application\math;$(ProjectDir)Code\application\scene</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>true</TreatWarningAsError>
@@ -168,80 +168,80 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Code\application\scene\AbstructSceneFactory.h" />
-    <ClInclude Include="Code\application\scene\BaseScene.h" />
-    <ClInclude Include="Code\application\scene\Framework.h" />
-    <ClInclude Include="Code\application\scene\SceneFactory.h" />
-    <ClInclude Include="Code\application\scene\SceneManager.h" />
-    <ClInclude Include="Code\application\win\DirectXCommon.h" />
-    <ClInclude Include="Code\application\win\MyGame.h" />
-    <ClInclude Include="Code\application\win\SafeDelete.h" />
-    <ClInclude Include="Code\application\win\WinApp.h" />
-    <ClInclude Include="Code\engine\2d\DebugText.h" />
-    <ClInclude Include="Code\engine\2d\Image2d.h" />
-    <ClInclude Include="Code\engine\2d\Particle.h" />
-    <ClInclude Include="Code\engine\3d\Model.h" />
-    <ClInclude Include="Code\engine\3d\Object3d.h" />
-    <ClInclude Include="Code\engine\audio\Audio.h" />
-    <ClInclude Include="Code\engine\game\Bullet.h" />
-    <ClInclude Include="Code\engine\game\Camera.h" />
-    <ClInclude Include="Code\engine\game\Collision.h" />
-    <ClInclude Include="Code\engine\game\Easing.h" />
-    <ClInclude Include="Code\engine\game\Enemy.h" />
-    <ClInclude Include="Code\engine\game\Light.h" />
-    <ClInclude Include="Code\engine\game\Player.h" />
-    <ClInclude Include="Code\engine\game\Rope.h" />
-    <ClInclude Include="Code\engine\input\Controller.h" />
-    <ClInclude Include="Code\engine\input\Keyboard.h" />
-    <ClInclude Include="Code\engine\input\Mouse.h" />
-    <ClInclude Include="Code\engine\json\LevelLoader.h" />
-    <ClInclude Include="Code\engine\math\Operator.h" />
-    <ClInclude Include="Code\engine\postEffect\MultiRT.h" />
-    <ClInclude Include="Code\engine\postEffect\MultiTex.h" />
-    <ClInclude Include="Code\engine\postEffect\PostEffect.h" />
-    <ClInclude Include="Code\engine\scene\FadeScene.h" />
-    <ClInclude Include="Code\engine\scene\GameClearScene.h" />
-    <ClInclude Include="Code\engine\scene\GameOverScene.h" />
-    <ClInclude Include="Code\engine\scene\GameScene.h" />
-    <ClInclude Include="Code\engine\scene\TitleScene.h" />
-    <ClInclude Include="Code\engine\scene\TutorialScene.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Code\application\scene\Framework.cpp" />
-    <ClCompile Include="Code\application\scene\SceneFactory.cpp" />
-    <ClCompile Include="Code\application\scene\SceneManager.cpp" />
-    <ClCompile Include="Code\application\win\DirectXCommon.cpp" />
-    <ClCompile Include="Code\application\win\main.cpp" />
-    <ClCompile Include="Code\application\win\MyGame.cpp" />
-    <ClCompile Include="Code\application\win\WinApp.cpp" />
+    <ClCompile Include="Code\application\game\Bullet.cpp" />
+    <ClCompile Include="Code\application\game\Enemy.cpp" />
+    <ClCompile Include="Code\application\game\Player.cpp" />
+    <ClCompile Include="Code\application\game\Rope.cpp" />
+    <ClCompile Include="Code\application\math\Collision.cpp" />
+    <ClCompile Include="Code\application\math\Easing.cpp" />
+    <ClCompile Include="Code\application\math\Operator.cpp" />
+    <ClCompile Include="Code\application\scene\FadeScene.cpp" />
+    <ClCompile Include="Code\application\scene\GameClearScene.cpp" />
+    <ClCompile Include="Code\application\scene\GameOverScene.cpp" />
+    <ClCompile Include="Code\application\scene\GameScene.cpp" />
+    <ClCompile Include="Code\application\scene\MyGame.cpp" />
+    <ClCompile Include="Code\application\scene\TitleScene.cpp" />
+    <ClCompile Include="Code\application\scene\TutorialScene.cpp" />
     <ClCompile Include="Code\engine\2d\DebugText.cpp" />
     <ClCompile Include="Code\engine\2d\Image2d.cpp" />
     <ClCompile Include="Code\engine\2d\Particle.cpp" />
+    <ClCompile Include="Code\engine\3d\Light.cpp" />
     <ClCompile Include="Code\engine\3d\Model.cpp" />
     <ClCompile Include="Code\engine\3d\Object3d.cpp" />
     <ClCompile Include="Code\engine\audio\Audio.cpp" />
-    <ClCompile Include="Code\engine\game\Bullet.cpp" />
-    <ClCompile Include="Code\engine\game\Camera.cpp" />
-    <ClCompile Include="Code\engine\game\Collision.cpp" />
-    <ClCompile Include="Code\engine\game\Easing.cpp" />
-    <ClCompile Include="Code\engine\game\Enemy.cpp" />
-    <ClCompile Include="Code\engine\game\Light.cpp" />
-    <ClCompile Include="Code\engine\game\Player.cpp" />
-    <ClCompile Include="Code\engine\game\Rope.cpp" />
+    <ClCompile Include="Code\engine\camera\Camera.cpp" />
+    <ClCompile Include="Code\engine\directXCommon\DirectXCommon.cpp" />
     <ClCompile Include="Code\engine\input\Controller.cpp" />
     <ClCompile Include="Code\engine\input\Keyboard.cpp" />
     <ClCompile Include="Code\engine\input\Mouse.cpp" />
-    <ClCompile Include="Code\engine\json\LevelLoader.cpp" />
-    <ClCompile Include="Code\engine\math\Operator.cpp" />
+    <ClCompile Include="Code\engine\level\LevelLoader.cpp" />
     <ClCompile Include="Code\engine\postEffect\MultiRT.cpp" />
     <ClCompile Include="Code\engine\postEffect\MultiTex.cpp" />
     <ClCompile Include="Code\engine\postEffect\PostEffect.cpp" />
-    <ClCompile Include="Code\engine\scene\FadeScene.cpp" />
-    <ClCompile Include="Code\engine\scene\GameClearScene.cpp" />
-    <ClCompile Include="Code\engine\scene\GameOverScene.cpp" />
-    <ClCompile Include="Code\engine\scene\GameScene.cpp" />
-    <ClCompile Include="Code\engine\scene\TitleScene.cpp" />
-    <ClCompile Include="Code\engine\scene\TutorialScene.cpp" />
+    <ClCompile Include="Code\engine\scene\Framework.cpp" />
+    <ClCompile Include="Code\engine\scene\SceneFactory.cpp" />
+    <ClCompile Include="Code\engine\scene\SceneManager.cpp" />
+    <ClCompile Include="Code\engine\winApp\WinApp.cpp" />
+    <ClCompile Include="Code\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Code\application\game\Bullet.h" />
+    <ClInclude Include="Code\application\game\Enemy.h" />
+    <ClInclude Include="Code\application\game\Player.h" />
+    <ClInclude Include="Code\application\game\Rope.h" />
+    <ClInclude Include="Code\application\math\Collision.h" />
+    <ClInclude Include="Code\application\math\Easing.h" />
+    <ClInclude Include="Code\application\math\Operator.h" />
+    <ClInclude Include="Code\application\scene\FadeScene.h" />
+    <ClInclude Include="Code\application\scene\GameClearScene.h" />
+    <ClInclude Include="Code\application\scene\GameOverScene.h" />
+    <ClInclude Include="Code\application\scene\GameScene.h" />
+    <ClInclude Include="Code\application\scene\MyGame.h" />
+    <ClInclude Include="Code\application\scene\TitleScene.h" />
+    <ClInclude Include="Code\application\scene\TutorialScene.h" />
+    <ClInclude Include="Code\engine\2d\DebugText.h" />
+    <ClInclude Include="Code\engine\2d\Image2d.h" />
+    <ClInclude Include="Code\engine\2d\Particle.h" />
+    <ClInclude Include="Code\engine\3d\Light.h" />
+    <ClInclude Include="Code\engine\3d\Model.h" />
+    <ClInclude Include="Code\engine\3d\Object3d.h" />
+    <ClInclude Include="Code\engine\audio\Audio.h" />
+    <ClInclude Include="Code\engine\camera\Camera.h" />
+    <ClInclude Include="Code\engine\directXCommon\DirectXCommon.h" />
+    <ClInclude Include="Code\engine\input\Controller.h" />
+    <ClInclude Include="Code\engine\input\Keyboard.h" />
+    <ClInclude Include="Code\engine\input\Mouse.h" />
+    <ClInclude Include="Code\engine\level\LevelLoader.h" />
+    <ClInclude Include="Code\engine\postEffect\MultiRT.h" />
+    <ClInclude Include="Code\engine\postEffect\MultiTex.h" />
+    <ClInclude Include="Code\engine\postEffect\PostEffect.h" />
+    <ClInclude Include="Code\engine\SafeDelete.h" />
+    <ClInclude Include="Code\engine\scene\AbstructSceneFactory.h" />
+    <ClInclude Include="Code\engine\scene\BaseScene.h" />
+    <ClInclude Include="Code\engine\scene\Framework.h" />
+    <ClInclude Include="Code\engine\scene\SceneFactory.h" />
+    <ClInclude Include="Code\engine\scene\SceneManager.h" />
+    <ClInclude Include="Code\engine\winApp\WinApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
